--- a/my_resume.html
+++ b/my_resume.html
@@ -5,9 +5,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <style>
+        body {
+          background-image: url('./Imange/BG.png');
+        }
+    </style>
     <h1 class="web-title">Hello welcome to my resume</h1>
-    <div>
-        <p class="just-text">My name is Don</p>
+    <div class="container">
+        <p class="just-text">I am Don</p>
     </div>
 </body>
 </html>
