just add my name

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>My Webboii</title>
 </head>
 <body>
-    <h1 style="text-align: center;"><a href="./my_resume.html" target="_blank"> Resume</a></h1>
+    <h1 style="text-align: center;"><a href="./my_resume.html"> Resume</a></h1>
 </body>
 </html>
