--- a/my_resume.html
+++ b/my_resume.html
@@ -10,9 +10,11 @@
           background-image: url('./Imange/BG.png');
         }
     </style>
-    <h1 class="web-title">Hello welcome to my resume</h1>
+    <h1 class="web-title"><u>Hello welcome to my resume</u></h1>
     <div class="container">
-        <p class="just-text">I am Don</p>
+        <p class="just-text">My name is Aigkarat Artapiyathan</p>
+        <p class="just-text">You can call me Don</p>
+        <p class="just-text">Be in this earth for 18 year</p>
     </div>
 </body>
 </html>
